assets/css/theme.css
/* ... */
#tab1:checked ~ nav .tab1 label:after,
#tab2:checked ~ nav .tab2 label:after,
#tab3:checked ~ nav .tab3 label:after,
#tab4:checked ~ nav .tab4 label:after,
#tab5:checked ~ nav .tab5 label:after,
#tab6:checked ~ nav .tab6 label:after {
  content: "";
  display: block;
  position: absolute;
  height: 2px;
  width: 100%;
  background: rgb(42, 42, 48);
  left: 0;
  bottom: 0px;
}

/* Visual Styles */
.product-tabs {
  width: 106%;
  max-width: 1200px;
  margin: 0 auto;
  margin-top: 60px;
}
.product-tabs ul {
  list-style: none;
  margin: 0;
  padding: 0;
}
.product-tabs ul li label {
  
  font-weight: bold;
  font-size: 13px;
  line-height: 32px;
  letter-spacing: 1.33333px;
  float: left;
  padding: 7px 15px 2px;
  width: 15%;
  text-align: center;
  background: #ffffff;
  color: #000;
  text-transform: uppercase;
  border: 1px solid #C4CFD3;
  border-bottom: 0;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  margin-right: 10px;
}
/*.product-tabs ul li label:hover {
  background: #DFE5F4;
}*/
.product-tabs ul li label:active {
  
  background: rgb(42, 42, 48);
}
.product-tabs section {
  width: 94.2%;
  clear: both;
}
.product-tabs section div {
  padding: 20px;
  width: 100%;
 /* border: 1px solid #C4CFD3;*/
  background: #fff;
  line-height: 1.5em;
  letter-spacing: 0.3px;
  color: #444;
  background: rgb(42, 42, 48);
  border-radius: 0px!important;
}
.product-tabs section div h2 {
  margin: 0;
 
  letter-spacing: 1px;
  color: #34495e;
}
/*tab css end*/
.gapp{
    margin-top: 6px;
}











/*---------- Responsive CSS Start ----------*/

@media (max-width: 1700px) {
    .logo a {
        padding-left: 85px!important;
    }
    .banner-content {
        margin-top: 145px;
        margin-bottom: 100px;
    }
    .footer-area {
        padding-top: 33px!important;
    }
}

@media (max-width: 1580px) {
    
}

@media (max-width: 1440px) {}

@media (max-width: 1199px) {}

@media (max-width: 1024px) {
html,
body {
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    /* overflow-x: hidden; */
}
.header-area {
    background-color: #000060;
}
img {
    height: auto;
    width: 100%;
}
.logo a {
    font-size: 30px;
    padding-left: 0%!important;
}
.product-tabs {
    
    margin-left: 1px;
}
.product-tabs ul li label {
    width: 30.5%;
}

}

@media (min-width: 992px) and (max-width: 1199px) {}

@media (max-width: 991px) {}

@media (min-width: 768px) and (max-width: 991px) {}

@media (max-width: 767px) {
html,
body {
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden;
    
}
.sec-wep h1 {
    color: #fff;
    font-size: 25px;
    margin-top: 57px;
}
.header-area {
    background-color: #000060;
}
.pb-60 {
    margin-top: 44px;
}
.c-services__item {
    margin-bottom: 30px;
}
/* img {
    height: 100%!important;
    width: 100%!important;
    margin: 0 auto;
} */
.banner-content .bottom-btn .btn-2 a:nth-child(2) {
    margin-left: 0px;margin-top: 20px;
}
.product-tabs {
    margin-left: 17px;
}

.product-tabs ul li label {
    width: 94%;
}
img {
    height: auto;
    width: 100%;
    margin: 0 auto;
}
}

@media (min-width: 480px) and (max-width: 767px) {
    

}
@media (min-width: 768px) and (max-width: 1024px) {
    .sec-wep h1 {
        color: #fff;
        font-size: 25px;
        margin-top: 57px;
    }

}

@media (max-width: 567px) {}

@media (max-width: 479px) {}

@media (max-width: 425px) {}
/* @media (max-width: 991px) and (min-width: 768px){
    .hexagon-icon:nth-child(3) .h-box{
        width: 100%!important;
    }
} */
@media only screen and (min-width: 1367px){
    .footer-area {
        padding-top: 40px!important;
    }
    .banner-content {
        margin-top: 245px;
        margin-bottom: 140px;
    }
    .logo a {
        padding-left: 190px;
    }
}





/*::::::::::::::::::::::::::End single_blog page  css:::::::::::::::::::::::::::::::::*/

